# github-api-client

./: README.md  app.py  gh-schema.json  ghschema.py
flask-graphql/: Dockerfile.notused  README.md  app.py  pyproject.toml  railway.toml  requirements.txt
flask-graphql/templates/: issues.html
sveltekit-rest/: README.md  package.json  pnpm-lock.yaml  svelte.config.js
sveltekit-rest/src/: app.html
sveltekit-rest/src/routes/: +page.server.ts  +page.svelte
sveltekit-rest/static/: issues.css
templates/: issues.html
